# ml_pipeline

./: .gitignore  Makefile  README.md  database.ini  pyproject.toml
etl/: data.py  exceptionetl.py
etl/sql/: schema_tables.sql  template_query.py
ml_pipeline/: Makefile  docker-compose.yaml
ml_pipeline/etl/: data.py  etl.py  exceptionetl.py
ml_pipeline/utils/: constants.py
model/: README.md
utils/: postgres_utils.py
